--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: test
 on:
     push:
         branches:
-            - "*"
+            - "main"
     pull_request:
         branches:
             - "main"
@@ -12,10 +12,30 @@ on:
 jobs:
     test:
         runs-on: ubuntu-latest
+        services:
+            localstack:
+                image: localstack/localstack:4.13.1
+                ports: ["4566:4566"]
+                options: >-
+                    --health-cmd "awslocal s3 ls" --health-interval 1s --health-timeout 5s
+                    --health-retries 5
         steps:
             - uses: actions/checkout@v6
             - uses: actions/setup-go@v6
               with:
-                  go-version: "1.25"
+                  go-version: "1.26"
                   check-latest: true
-            - run: go build .
+            - name: Golangci-lint
+              uses: golangci/golangci-lint-action@v9
+              with:
+                  version: latest
+            - run: go build ./...
+            - run: gofmt -d .
+            - run: go vet ./...
+            - run: go fix -diff ./...
+            - run: go test -v -tags integration ./...
+              env:
+                  AWS_ENDPOINT_URL: "http://localhost:4566"
+                  AWS_ACCESS_KEY_ID: "test"
+                  AWS_SECRET_ACCESS_KEY: "test"
+                  AWS_DEFAULT_REGION: "us-east-1"
