refactor: Update test workflow to disable integration tests and skip if not enabled

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,8 +33,10 @@ jobs:
             - run: gofmt -d .
             - run: go vet ./...
             - run: go fix -diff ./...
-            - run: go test -v -tags integration ./...
+            - run: go test -v ./...
               env:
+                  # TODO: DescribeNetworkInterfaces has not been implemented in Moto yet
+                  ENABLE_INTEGRATION_TESTS: "false"
                   AWS_ENDPOINT_URL: "http://localhost:4566"
                   AWS_ACCESS_KEY_ID: "test"
                   AWS_SECRET_ACCESS_KEY: "test"
